--- a/css/css.css
+++ b/css/css.css
@@ -61,5 +61,46 @@ a{
 .slider-button:hover span{
 	color: #fff;
 }
-
-
+.container{
+	width: 80vw;
+	height: auto;
+	position: relative;
+	margin: auto;
+	margin-top: 1vw;
+}
+.grid-container{
+	display: grid;
+	grid-template-columns: 33% 33%
+	33%	;
+	grid-template-rows: auto;
+	height: auto;
+	grid-gap: 1vw;
+	width: 100%;
+}
+.card{
+	border: 0.1vw solid rgb(0, 122, 255);
+	text-align: center;
+	width: 100%;
+	background-color: #fff;
+	font-family: 'Montserrat Alternates', sans-serif;
+	border-radius: 1vw;
+	cursor: pointer;
+	transition: 1s;
+}
+.card-img{
+	width: 100%;
+	padding: 0;
+	border-radius: 1vw 1vw 0 0;
+}
+.card-title{
+	font-size: 1.5vw;
+	font-weight: bold;
+	color: rgb(0, 122, 255);
+}
+.card-content{
+	font-size: 1vw;
+}
+.card:hover{
+	background-color: lightgray;
+	transition: 1s;
+}
