--- a/css/search.css
+++ b/css/search.css
@@ -8,7 +8,7 @@
 select{
 	width: 15%;
 	height: 3%;
-	font-size:2vw;
+	font-size:1.5vw;
 	border-radius: 1vw; 
 	padding: 0.4vw;
 	float: left;
@@ -17,6 +17,8 @@ select{
 	font-family: 'Montserrat Alternates', sans-serif;
 	outline: none;
 	text-align: center;
+	border:0.1vw solid white;
+	margin-top: 0.5vw;
 }
 .city-c{
 	font-family: 'Montserrat Alternates', sans-serif;
@@ -45,6 +47,7 @@ select{
 		text-align: center;
 		cursor: pointer;
 		transition: 0.3s;
+		font-size: 1.1vw;
 }
 .search-label{
 	position: absolute;
