--- a/css/auth.css
+++ b/css/auth.css
@@ -133,4 +133,9 @@
 	font-size: 0.7vw;
 	font-family: 'Montserrat Alternates', sans-serif;
 }
+#error{
+	color: red;
+	font-size: 0.7vw;
+	font-family: 'Montserrat Alternates', sans-serif;
+}
 
