--- a/css/css.css
+++ b/css/css.css
@@ -107,3 +107,6 @@ a{
 	background-color: lightgray;
 	transition: 1s;
 }
+.kek{
+	font-family: "Montserrat Alternates", sans-serif; color:gray; font-size:2vw;
+}
