--- a/css/make.css
+++ b/css/make.css
@@ -1,13 +1,17 @@
 .make-form{
 	margin: auto;
 	width: 40vw;
-	min-height: 40vw;
 	background-color: #162034;
 	border-radius: 2vw;
 	padding: 1vw;
 	position: relative;
 	transition:1s;
-	height: 40vw;
+	min-height: 46vw;
+	height: auto;
+
+}
+.hidden{
+	display: none;
 }
 #title{
 	text-align: center;
@@ -23,15 +27,17 @@
 	height: 2vw;
 	border-bottom: 0.1vw solid silver;
 	width: 80%;
+	position: relative;
 }
-.make-filter label,div{
+.make-filter label, .make-filter div{
 	font-family: 'Montserrat Alternates', sans-serif;
 	font-size: 1.2vw;
 	font-weight: bold;
 	color: #808080;
-	margin-left: 0.6vw;												
+	margin-left: 0.6vw;
+	margin-bottom: 4vw;												
 }
-.make-filter select, .make-filter input{
+.make-filter select, .make-filter input,.make-info{
 	width: 100%;
 	float: right;
 	height: 2vw;
@@ -44,6 +50,14 @@
 	padding-bottom: 0.5vw;
 	margin-bottom: 0.5vw;
 }
+.make-info{
+	border:none;
+	border-bottom: 0.1vw solid silver;
+	width: 97%;
+	height: auto;
+	color: #fff;
+
+}
 .make-filter input{
 	width: 25%;
 	float: left;
@@ -54,17 +68,45 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	margin-bottom: 1vw;
+	width: 100%;
+	position: relative;
 }
 .photo{
-	height: 3vw;
-	width: 3vw;
-	background-color: black;
 	position: relative;
-	border-radius: 0.4vw;
-	color: white;
-	font-weight: bold;
-	font-size: 3.5vw;
+	width: 100%;
+	
+}
+
+.photo span{
+	width: 4vw;
+	height: 4vw;
+	position: absolute;
+	border:0.1vw solid #007aff;
+	background-color: rgb(0,0,0,0);
+	font-size: 4vw;
+	top:0%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	text-align: center;
+	border-radius: 2vw;
 	cursor: pointer;
+
+}
+.photo span:hover{
+	opacity: 0.6;
+}
+.photo span div{
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.photo span div span{
+	position: absolute;
+	top:40%;
+	left: 35%;
+	transform: translate(-50%,-50%);
+	color:#fff;
+	border: none;
 
 }
 .plus{
@@ -72,4 +114,31 @@
 	top:50%;
 	left: 50%;
 	transform:translate(-50%,-50%);
+}
+.inv{
+	border-bottom: none;
+	margin-top: 3vw;
+}
+.make-button{
+	
+	width: 40%;
+	height: 3vw;
+	background-color: #007aff;
+	color:#fff;
+	border-radius: 2vw;
+	cursor: pointer;
+}
+.make-button:hover{
+	opacity: 0.5;
+}
+.make-button:after {
+	content: '';
+	display: table;
+	clear: both;
+}
+.make-button span{
+	position: absolute;
+	top:50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
