--- a/css/make.css
+++ b/css/make.css
@@ -90,10 +90,12 @@
 	text-align: center;
 	border-radius: 2vw;
 	cursor: pointer;
+	transition: 1s;
 
 }
 .photo span:hover{
-	opacity: 0.6;
+	
+
 }
 .photo span div{
 	width: 100%;
@@ -107,13 +109,15 @@
 	transform: translate(-50%,-50%);
 	color:#fff;
 	border: none;
-
+	
 }
+
 .plus{
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform:translate(-50%,-50%);
+		transform:rotate(45deg) translate(-50%,-50%)!important;
+	top:63% !important;
+	left: -3% !important;
+	color:red !important;
+	transition: 0.5s !important;
 }
 .inv{
 	border-bottom: none;
@@ -142,3 +146,20 @@
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
+.i-note{
+	position: absolute;
+	left:5%;
+	top:20%;
+	width: 15vw;
+	height: 15vw;
+	background-color: lightgray;
+	font-size: 1vw;
+	font-family: 'Montserrat Alternates', sans-serif;
+	padding: 1vw;
+	color:#007aff;
+	border: 0.1vw solid #007aff;
+}
+.i-note li{
+	margin-top: 1vw;
+}
+
