--- a/css/css.css
+++ b/css/css.css
@@ -65,12 +65,13 @@ a{
 .container{
 	width: 80vw;
 	height: auto;
+	height: 100%;
 	position: relative;
 	margin: auto;
 	margin-top: 1vw;
 	padding-bottom: 20vw;
 	box-sizing: border-box;
-
+	min-height: 35vw;
 }
 .grid-container{
 	display: grid;
