--- a/css/inst.css
+++ b/css/inst.css
@@ -88,7 +88,7 @@ font-family: 'Montserrat Alternates', sans-serif;
 
 }
 .inst-card{
-	border-radius: 2vw;
+	border-radius: 0.5vw;
 	border:0.1vw solid gray;
 	overflow: hidden;
 	cursor: pointer;
@@ -110,7 +110,7 @@ font-family: 'Montserrat Alternates', sans-serif;
 .card-picture{
 	width: 100%;
 	height: 100%;
-	border-radius: 2vw 2vw 0 0;
+	border-radius: 0.5vw 0.5vw 0.5vw 0.5vw;
 }
 .card-row{
 	border-bottom: 0.1vw solid gray;
