--- a/css/edu.css
+++ b/css/edu.css
@@ -3,60 +3,65 @@
 	width: 100%;
 }
 .e-choise{
-	margin:1vw ;
-	width: 25%;
-	border-radius: 2vw;
-	overflow: hidden;
+	margin:1vw;
+	border-radius: 0.5vw;
 	height: 2.3vw;
 	cursor: pointer;
-	position: absolute;
-	right: 0;
-}
-.e-choise:after{
-	content: '';
-	clear: both;
-	display: table;
-}
-.e-choise span{
-	font-weight: bold;
-	font-size: 1vw;
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform:translate(-50%,-50%);
-	color: lightgray;
-}
-.pay{
-	width: 50%;
-	height: 100%;
-	background-color: #395ABD;
-	float: left;
+	position: relative;
+	float: right;
+	border: 1px solid #d7dde1;
+	font-size: 1.2vw;
 	font-family: 'Montserrat Alternates', sans-serif;
+
+}
+.courses{
+	width: 100%;
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+	grid-gap: 2%;
+}
+.course{
+	background-color: #162034;
+	height: 20vw;
+	width: 98%;
+	border-radius: 0.5vw;
 	position: relative;
 	transition: 0.5s;
+	box-shadow: 0 0 0vw white;
+	margin: 1vw 0;
 }
-.pay:after{
-	content: '';
-	clear: both;
-	display: table;
+.course:hover{
+	transition: 0.5s;
+	box-shadow: 0 0 1vw gray;
+	cursor: pointer;
 }
-
-.free{
-	float: left;
-	width:50%;
-	height: 100%;
-	background-color: #395ABD;
-	font-family: 'Montserrat Alternates', sans-serif;
-	position: relative;
-	transition: 0.1s;
+.course:hover .c-title{
+ 	transition: 1s;
+ 	font-size: 1.4vw;
 }
-.active{
-	transition: 0.1s;
-	background-color: #007AFF;
+.course:hover .paid{
+ 	transition: 1s;
+ 	font-size: 1.2vw;
 }
-.active span{
-	color:#fff;
+.c-title{
+	position: absolute;
+	bottom: 0;
+	width: 96%;
+	text-align: center;
+	font-size: 1.2vw;
+	padding: 2%;
+	transition: 1s;
+	color: white;
+	font-weight: bold;
 }
-.lessons{
-	height: 4.4vw;
+.paid{
+	position: absolute;
+	right: 0;
+	top: 0;
+	background-color: green;
+	padding: 0.4vw;
+	font-size: 1.1vw;
+	color: white;
+	border-radius: 0 0.5vw 0 0.5vw;
+	transition: 1s;
 }
