--- a/css/edu.css
+++ b/css/edu.css
@@ -43,6 +43,10 @@
  	transition: 1s;
  	font-size: 1.2vw;
 }
+.course:hover .free{
+ 	transition: 1s;
+ 	font-size: 1.2vw;
+}
 .c-title{
 	position: absolute;
 	bottom: 0;
@@ -64,4 +68,15 @@
 	color: white;
 	border-radius: 0 0.5vw 0 0.5vw;
 	transition: 1s;
+}
+.free{
+	position: absolute;
+	right: 0;
+	top: 0;
+	background-color: red;
+	padding: 0.4vw;
+	font-size: 1.1vw;
+	color: white;
+	border-radius: 0 0.5vw 0 0.5vw;
+	transition: 1s;	
 }
