--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,40 @@
 	z-index: 999;
 	transition: 0.5s;	
 }
+.icon-burger:before{
+	width: 100%;
+	height: 3px;
+	position: absolute;
+	border-bottom: 2px solid white;
+	top:-5px;
+	left: 0;
+	content: '';
+	transition: 1s;
+}
+.icon-burger{
+	position: absolute;
+	border-bottom: 2px solid white;
+	width: 80%;
+	height: 3px;
+	top:12px;
+	left: 4px;
+	transition: 1s;
+}
+.icon-burger:after{
+	position: absolute;
+	border-bottom: 2px solid white;
+	width: 100%;
+	height: 3px;
+	top:5px;
+	left: 0;
+	content: '';	
+	transition: 1s;
+}
+.relative{
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
 #check{
 	display: none;
 }
@@ -20,7 +54,7 @@
 .burger{
 	width: 30px;
 	height: 30px;
-	background-color: black;
+	background-color: #162034;
 	color:white;
 	font-size: 30px;
 	text-align: center;
