--- a/css/test.css
+++ b/css/test.css
@@ -1,8 +1,8 @@
 .test{
-	width: 100%;
+	width: 90%;
 	height: 30vw;
 	background-color: lightgray;
-	padding: 1vw;
+	padding: 5%;
 }
 .test-list{
 	list-style: none;
@@ -12,4 +12,16 @@
 }
 .question{
 	font-size: 1.5vw;
+}
+.t-pics{
+	display: grid;
+	grid-gap: 2%;
+	margin: 1vw 0;
+	width: 90%;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.t-pic{
+	width: 100%;
+	height: 10vw;
+	background-color: gray;
 }
